--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,17 @@
 @import "tailwindcss";
 
+
+.slick-slider {
+  display: block !important;
+}
+
+.slick-list {
+  overflow: hidden !important;
+}
+.slick-track { display: flex !important; }
+
+
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -23,4 +35,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
